--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -32,64 +32,53 @@ stages:
 - stage: Asset
   displayName: Create Assets
   jobs:
-    - job: CreateAssets
-      pool:
-        name: Azure-UIP
-      steps:
-        - task: UiPathAssets@3
-          inputs:
-            orchestratorConnection: 'Azure-UIpath'
-            folderName: 'Shared'
-            assetActionType: 'Deploy'
-            csvFile: '$(Build.SourcesDirectory)/Data/Assets.csv'
+  - job: CreateAssets
+    pool:
+      name: Azure-UIP
+    steps:
+    - task: UiPathAssets@3
+      inputs:
+        orchestratorConnection: 'Azure-UIpath'
+        folderName: 'Shared'
+        assetActionType: 'Deploy'
+        csvFile: '$(Build.SourcesDirectory)/Data/Assets.csv'
 
 - stage: DeployDEV
   displayName: Deploy build artifact to DEV
   dependsOn: Build
   condition: succeeded()
   jobs:
-    - deployment: deployDEV
-      displayName: Restore package to DEV Orchestrator
-      pool:
-        name: Azure-UIP
-      environment: 'DEV'
-      strategy:
-        runOnce:
-          deploy:
-            steps:
-              - task: NuGetCommand@2
-                inputs:
-                  command: 'restore'
-                  restoreSolution: '**/*.sln'
-                  feedsToUse: 'select'
+  - deployment: deployDEV
+    displayName: Restore package to DEV Orchestrator
+    pool:
+      name: Azure-UIP
+    environment: 'DEV'
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - task: NuGetCommand@2
+            inputs:
+              command: 'restore'
+              restoreSolution: '**/*.sln'
+              feedsToUse: 'select'
 
 - stage: RunTests
   displayName: Run UiPath Tests
   jobs:
-  - job: RunUiPathTests
-    displayName: Run UiPath Tests
+  - job: RunXAMLFile
     pool:
-      vmImage: 'windows-2019' # Specify a Windows image with UiPath and other required tools installed.
+      name: Azure-UIP
     steps:
-    - task: NuGetToolInstaller@1
-      displayName: 'Install NuGet'
+    - task: DownloadSecureFile@1
+      displayName: 'Download XAML file'
       inputs:
-        versionSpec: '5.x'
-    - task: NuGetCommand@2
-      displayName: 'Restore NuGet packages'
+        secureFile: 'XAMLFile'
+        retryCount: 3
+
+    - task: PowerShell@2
+      displayName: 'Execute XAML file'
       inputs:
-        command: 'restore'
-        restoreSolution: '**/*.sln'
-        feedsToUse: 'select'
-        vstsFeed: '<your VSTS feed>' # Specify the NuGet feed containing the UiPath.Testing.Activity package.
-    - task: DownloadBuildArtifacts@0
-      displayName: 'Download Test Suite project'
-      inputs:
-        buildType: 'current'
-        downloadType: 'specific'
-        artifactName: 'TestSuite' # Specify the name of the artifact containing the UiPath Test Suite project.
-        downloadPath: '$(Build.ArtifactStagingDirectory)/TestSuite'
-    - script: |
-        cd '$(Build.ArtifactStagingDirectory)/TestSuite'
-        UiPath.Testing.Activity.exe -uipathTestSuite -testSuitePath 'Tests.xml' -resultPath 'Results.xml'
-      displayName: 'Run UiPath Tests'
+        targetType: 'inline'
+        script: |
+          & "$env:AGENT_TEMPDIRECTORY\XAMLFile.xaml"
