--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -63,6 +63,20 @@ stages:
               testAssemblyVer2: |
                 **\*test*.dll
                 !**\*TestAdapter.dll
-                !**\obj\**
-              searchFolder: '$(System.DefaultWorkingDirectory)'
 
+
+- stage: TestDEV
+  displayName: Test After Publish
+  dependsOn: DeployDEV
+  condition: succeeded()
+  jobs:
+  - job: TestDEV
+    pool: Azure-UIP
+    steps:
+    - task: UiPathTest@3
+      inputs:
+        testTarget: 'TestSet'
+        orchestratorConnection: 'UiPATH RPABOTSWORLD'
+        testSet: 'UiPathAzureDevOps_Tests'
+        folderName: 'Shared'
+        testReportDestination: '$(Pipeline.Workspace)\drop'
