--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -76,7 +76,7 @@ stages:
     - task: UiPathTest@3
       inputs:
         testTarget: 'TestSet'
-        orchestratorConnection: 'UiPATH RPABOTSWORLD'
+        orchestratorConnection: 'Azure-UIpath'
         testSet: 'UiPathAzureDevOps_Tests'
         folderName: 'Shared'
         testReportDestination: '$(Pipeline.Workspace)\drop'
