--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -6,7 +6,7 @@ variables:
 
 stages:
 - stage: Build
-  displayName: Create build artifact
+  displayName: 'Create build artifact'
   jobs:
   - job: BuildArtifact
     pool:
@@ -30,7 +30,7 @@ stages:
         folderName: 'Shared'
 
 - stage: Asset
-  displayName: Create Assets
+  displayName: 'Create Assets'
   jobs:
   - job: CreateAssets
     pool:
@@ -44,12 +44,12 @@ stages:
         csvFile: '$(Build.SourcesDirectory)/Data/Assets.csv'
 
 - stage: DeployDEV
-  displayName: Deploy build artifact to DEV
+  displayName: 'Deploy build artifact to DEV'
   dependsOn: Build
   condition: succeeded()
   jobs:
   - deployment: deployDEV
-    displayName: Restore package to DEV Orchestrator
+    displayName: 'Restore package to DEV Orchestrator'
     pool:
       name: Azure-UIP
     environment: 'DEV'
@@ -64,19 +64,25 @@ stages:
                 **\*test*.dll
                 !**\*TestAdapter.dll
 
-
 - stage: TestDEV
-  displayName: Test After Publish
+  displayName: 'Test After Publish'
   dependsOn: DeployDEV
   condition: succeeded()
   jobs:
   - job: TestDEV
-    pool: Azure-UIP
+    pool: 
+      name: Azure-UIP
     steps:
-    - task: UiPathTest@3
+    - task: PowerShell@2
       inputs:
-        testTarget: 'TestSet'
-        orchestratorConnection: 'Azure-UIpath'
-        testSet: 'UiPathAzureDevOps_Tests'
-        folderName: 'Shared'
-        testReportDestination: '$(Pipeline.Workspace)\drop'
+        targetType: 'inline'
+        script: |
+          $repos = Get-AzReposRepository -OrganizationName "<Azure-UIPath>" -ProjectName "<Azure-UIPath>"
+
+          foreach ($repo in $repos) {
+              $repoName = $repo.Name
+              $repoUrl = $repo.RemoteUrl
+              Write-Host "Testing $repoName at $repoUrl ..."
+              # add your testing command here
+          }
+    displayName: 'Test all code in Azure Repo'
